force-app/main/default/objects/ampi__xx_Assignment__c/ampi__xx_Assignment__c.object-meta.xml
<CustomObject>
    <description>Assign positions to activities, plan and track the effort required for each assignment</description>
    <label>Assignment</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>