force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_Activity__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the parent activity that needs workforce assigned</description>
    <label>Activity</label>
    <referenceTo>ampi__Activity__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>