force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Actual_Cost__c</fullName>
    <description>This formula field calculates the actual cost of assignment based on the end date, start date, and actual effort</description>
    <formula>ampi__xx_Actual_Effort__c *( ampi__xx_End_Date__c - ampi__xx_Start_Date__c + 1)*
IF(ISPICKVAL(ampi__xx_Position__r.ampi__xx_Time_Unit_For_Costing__c,&quot;Day&quot;),ampi__xx_Position__r.ampi__xx_Unit_Cost__c,
IF(ISPICKVAL(ampi__xx_Position__r.ampi__xx_Time_Unit_For_Costing__c,&quot;Hour&quot;),8*ampi__xx_Position__r.ampi__xx_Unit_Cost__c,
IF(ISPICKVAL(ampi__xx_Position__r.ampi__xx_Time_Unit_For_Costing__c,&quot;Year&quot;),ampi__xx_Position__r.ampi__xx_Unit_Cost__c/365.25, NULL)
)
)</formula>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>