force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_Actual_Effort__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Actual_Effort__c</fullName>
    <description>Percent field to log the actual level ​of effort required from related position for the activity. This field should not exceed 100%.</description>
    <inlineHelpText>The Actual Effort cannot exceed 100%</inlineHelpText>
    <label>Actual Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>