force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_End_Date__c</fullName>
    <description>Date field to specify and track the end date of an assignment</description>
    <inlineHelpText>The default value for Assignment End Date is same as the Actual End Date of the related Activity</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>