force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_Position__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify which position is being assigned to related activity for this assignment</description>
    <label>Position</label>
    <referenceTo>ampi__xx_Position__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>