force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_Role__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify which role is required to complete the related activity for this assignment</description>
    <label>Role</label>
    <referenceTo>ampi__xx_Role__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>