force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Start_Date__c</fullName>
    <description>Date field to specify and track the start date of an assignment</description>
    <inlineHelpText>The default value for Assignment Start Date is same as the Actual Start Date of the related Activity</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>