force-app/main/default/objects/ampi__xx_Assignment__c/fields/ampi__xx_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Status__c</fullName>
    <description>Picklist field to specify the status of the assignment</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>