force-app/main/default/objects/ampi__xx_Assignment__c/validationRules/ampi__Estimated_Effort_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__Estimated_Effort_Limit</fullName>
    <active>true</active>
    <description>This Validation Rule verifies that the value saved in ampi__xx_Estimated_Effort__c does not exceed 100%</description>
    <errorConditionFormula>ampi__xx_Estimated_Effort__c &gt; 1</errorConditionFormula>
    <errorDisplayField>ampi__xx_Estimated_Effort__c</errorDisplayField>
    <errorMessage>The Estimated Effort cannot exceed 100%</errorMessage>
</ValidationRule>